# selenium_webdriver

./: pyproject.toml  test_login_case.py
lesson_11/: conftest.py  driver.py  pages.py  test_work_with_basket_2.py
lesson_1_2/: test_exampele.py
lesson_3/: check_labels.py  click_all_items.py
lesson_4/: check_product_page.py  sorting_countries_and_zones.py  sorting_zones_to_zonespage.py
lesson_5/: add_product.py  new_user_registration.py
lesson_6/: test_work_with_basket.py
lesson_7/: check_opening_new_window.py
lesson_9/: check_message_in_browser_logs.py
