[tool.poetry]
name = "selenium_webdriver"
version = "0.1.0"
description = ""
authors = ["dalariono1 <dalariono1@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "^4.8.2"
pytest = "^7.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
